whatsmyip/whatsmyip.yaml
apiVersion: v1
kind: Service
metadata:
  name: whatsmyip
  labels:
    app: whatsmyip
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: whatsmyip
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whatsmyip
  labels:
    app: whatsmyip
spec:
  selector:
    matchLabels:
      app: whatsmyip
  replicas: 2
  template:
    metadata:
      labels:
        app: whatsmyip
    spec:
      containers:
      - name: whatsmyip
        image: oze4/whatsmyip:latest
        ports:
        - containerPort: 8080
