whatsmyip/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: whatsmyip-ingress
  annotations:  
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - whatsmyip.ostrike.com
    secretName: whatsmyip-prod
  rules:
  - host: whatsmyip.ostrike.com
    http:
      paths:
      - backend:
          serviceName: whatsmyip
          servicePort: 80
